Revise Index.HTML for content and structure updates
Updated the content and structure of the Index.HTML file, including changes to headings, sections, and booking policies.

--- a/Index.HTML
+++ b/Index.HTML
@@ -3,143 +3,99 @@
 <head>
 <meta charset="UTF-8">
 <title>Karti the Hair Slayer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-<!-- HEADER -->
 <header>
 <h1>Karti the Hair Slayer</h1>
-<p>Luxury Braids • Protective Styles • Installs</p>
-
-<a href="https://www.instagram.com/styldbyck?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
-"
-class="book-btn"
-target="_blank">
-Book Now
-</a>
+<p>Luxury Braiding • Hair Included • NYC</p>
+<a class="book-btn" href="#booking">Book Now</a>
 </header>
 
-<!-- KNOTLESS BRAIDS -->
-<section class="cards">
-<h2>Knotless Braids</h2>
-<div class="card-grid">
-<div class="card">Large — $170</div>
-<div class="card">Medium — $220</div>
-<div class="card">Smedium — $265</div>
-<div class="card">Small — $320</div>
-<div class="card">Heart Knotless — $200</div>
-<div class="card">Knotless Bob — $180</div>
-<div class="card">Boho Bob — $200</div>
-</div>
-</section>
-
-<!-- ADD ONS -->
-<section class="cards">
-<h2>Add-Ons</h2>
-<div class="card-grid">
-<div class="card">Triangle Parts — $10</div>
-<div class="card">Boho — $15–$25</div>
-<div class="card">Extra Boho Bundle — $25</div>
-<div class="card">Beads — $10+</div>
-</div>
-</section>
-
-<!-- FLIP OVER BRAIDS -->
-<section class="cards">
-<h2>Flip Over Braids</h2>
-<div class="card-grid">
-<div class="card">Large — $180</div>
-<div class="card">Medium — $230</div>
-<div class="card">Smedium — $285</div>
-<div class="card">Small — $325</div>
-<div class="card">Flip Over Bob — $210</div>
-</div>
-</section>
-
-<!-- FULANI BRAIDS -->
-<section class="cards">
-<h2>Fulani Braids</h2>
-<div class="card-grid">
-<div class="card">Large — $180</div>
-<div class="card">Medium — $215</div>
-<div class="card">Smedium — $250</div>
-<div class="card">Small — $290</div>
-<div class="card">Bob — $185</div>
-</div>
-</section>
-
-<!-- FEED IN BRAIDS -->
-<section class="cards">
-<h2>Feed-In Braids / Straight Backs</h2>
-<div class="card-grid">
-<div class="card">2 Feed-Ins — $70</div>
-<div class="card">4 Feed-Ins — $85</div>
-<div class="card">6 Feed-Ins — $100</div>
-<div class="card">8–10 Feed-Ins — $120</div>
-<div class="card">12–14 Feed-Ins — $140</div>
-<div class="card">16–18 Feed-Ins — $160</div>
-<div class="card">20–24 Feed-Ins — $185</div>
-<div class="card">26–30 Feed-Ins — $220</div>
-</div>
-</section>
-
-<!-- NATURAL HAIR -->
-<section class="cards">
-<h2>Natural Hair Services</h2>
-<div class="card-grid">
-<div class="card">Box Braids/Twists (Large) — $60</div>
-<div class="card">Box Braids/Twists (Medium) — $75</div>
-<div class="card">Box Braids/Twists (Small) — $90</div>
-<div class="card">Cornrows (2) — $30</div>
-<div class="card">Cornrows (4) — $40</div>
-<div class="card">Cornrows (6) — $55</div>
-<div class="card">Cornrows (8) — $70</div>
-<div class="card">Cornrows (10) — $85</div>
-<div class="card">Designed Styles — $65+</div>
-<div class="card">Retwist — $85</div>
-<div class="card">Relaxer — $50</div>
-<div class="card">Hair Coloring — $65</div>
-<div class="card">Additional Color — $25</div>
-</div>
-</section>
-
-<!-- INSTALLS -->
-<section class="cards">
-<h2>Installs</h2>
-<div class="card-grid">
-<div class="card">Wig Install — $75</div>
-<div class="card">Sew-In — $125</div>
-<div class="card">Quick Weave — $100</div>
-</div>
-</section>
-
-<!-- BOOKING POLICY -->
 <section>
-<h2>Booking Policy</h2>
+<h2>Knotless Braids</h2>
 <ul>
-<li>• Non-refundable deposit required</li>
-<li>• Hair  included </li>
-<li>• Come washed & blow-dried</li>
-<li>• 15+ minutes late = cancellation</li>
+<li>Large — $170</li>
+<li>Medium — $220</li>
+<li>Smedium — $265</li>
+<li>Small — $320</li>
+<li>Heart Knotless — $200</li>
+<li>Knotless Bob — $180</li>
+<li>Boho Bob — $200</li>
 </ul>
 </section>
 
-<!-- FOOTER -->
-<footer>
-<p>Karti the Hair Slayer</p>
-<p>Luxury • Precision • Slay Every Time</p>
-</footer>
+<section>
+<h2>Flip Over Braids</h2>
+<ul>
+<li>Large — $180</li>
+<li>Medium — $230</li>
+<li>Smedium — $285</li>
+<li>Small — $325</li>
+<li>Flip Over Bob — $210</li>
+</ul>
+</section>
 
-<!-- FLOATING BOOK BUTTON -->
-<a href="https://www.instagram.com/styldbyck?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
-"
-class="floating-book-btn"
-target="_blank">
-Book Now ✨
-</a>
+<section>
+<h2>Fulani Braids</h2>
+<ul>
+<li>Large — $180</li>
+<li>Medium — $215</li>
+<li>Smedium — $250</li>
+<li>Small — $290</li>
+<li>Bob — $185</li>
+</ul>
+</section>
+
+<section>
+<h2>Feed-In / Straight Backs</h2>
+<ul>
+<li>2 Feed-Ins — $70</li>
+<li>4 Feed-Ins — $85</li>
+<li>6 Feed-Ins — $100</li>
+<li>8–10 Feed-Ins — $120</li>
+<li>12–14 Feed-Ins — $140</li>
+<li>16–18 Feed-Ins — $160</li>
+<li>20–24 Feed-Ins — $185</li>
+<li>26–30 Feed-Ins — $220</li>
+</ul>
+</section>
+
+<section>
+<h2>Installs</h2>
+<ul>
+<li>Wig Install — $75</li>
+<li>Sew-In — $125</li>
+<li>Quick Weave — $100</li>
+</ul>
+</section>
+
+<section>
+<h2>Freestyle (Artist Choice)</h2>
+<ul>
+<li>$100 Freestyle</li>
+<li>$150 Freestyle</li>
+<li>$175 Freestyle</li>
+<li>$200 Freestyle</li>
+<li>$250 Freestyle</li>
+</ul>
+</section>
+
+<section id="booking">
+<h2>Booking Policies</h2>
+<p>$27 deposit required ($25 toward service + $2 fee)</p>
+<p>Hair is included</p>
+<p>Hair must be clean, blown out & product-free</p>
+<p><strong>No call / no show = ban</strong></p>
+<p>To rebook after no-show: <strong>50% of service required</strong></p>
+</section>
+
+<footer>
+<p>Follow on Instagram</p>
+<a href="https://www.instagram.com" target="_blank">@kartithehairslayer</a>
+</footer>
 
 </body>
 </html>
