Revise service offerings and booking information
Updated service sections and booking policies.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Karti the Hair Slayer</title>
-<link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
 <h1>Karti the Hair Slayer</h1>
 <p>Luxury Braiding • Hair Included • NYC</p>
-<a class="book-btn" href="#booking">Book Now</a>
+<a class="book-btn" href="#book">Book Now</a>
 </header>
 
 <section>
@@ -39,41 +39,7 @@
 </section>
 
 <section>
-<h2>Fulani Braids</h2>
-<ul>
-<li>Large — $180</li>
-<li>Medium — $215</li>
-<li>Smedium — $250</li>
-<li>Small — $290</li>
-<li>Bob — $185</li>
-</ul>
-</section>
-
-<section>
-<h2>Feed-In / Straight Backs</h2>
-<ul>
-<li>2 Feed-Ins — $70</li>
-<li>4 Feed-Ins — $85</li>
-<li>6 Feed-Ins — $100</li>
-<li>8–10 Feed-Ins — $120</li>
-<li>12–14 Feed-Ins — $140</li>
-<li>16–18 Feed-Ins — $160</li>
-<li>20–24 Feed-Ins — $185</li>
-<li>26–30 Feed-Ins — $220</li>
-</ul>
-</section>
-
-<section>
-<h2>Installs</h2>
-<ul>
-<li>Wig Install — $75</li>
-<li>Sew-In — $125</li>
-<li>Quick Weave — $100</li>
-</ul>
-</section>
-
-<section>
-<h2>Freestyle (Artist Choice)</h2>
+<h2>Freestyle (Artist’s Choice)</h2>
 <ul>
 <li>$100 Freestyle</li>
 <li>$150 Freestyle</li>
@@ -83,13 +49,25 @@
 </ul>
 </section>
 
-<section id="booking">
+<section id="book">
+<h2>Book Your Appointment</h2>
+
+<iframe
+src="https://calendly.com/kartithestylist/30min"
+width="100%"
+height="700"
+frameborder="0"
+style="border-radius:16px;">
+</iframe>
+</section>
+
+<section class="policy">
 <h2>Booking Policies</h2>
-<p>$27 deposit required ($25 toward service + $2 fee)</p>
-<p>Hair is included</p>
-<p>Hair must be clean, blown out & product-free</p>
-<p><strong>No call / no show = ban</strong></p>
-<p>To rebook after no-show: <strong>50% of service required</strong></p>
+<p><strong>$27 deposit required</strong> ($25 goes toward service + $2 transaction fee)</p>
+<p>Hair is included with all services</p>
+<p>Hair must be clean, blown out, and product-free unless wash is added</p>
+<p><strong>No call / no show = automatic ban</strong></p>
+<p>To rebook after a no-show, <strong>50% of service is required</strong></p>
 </section>
 
 <footer>
