Update booking link in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <header>
 <h1>Karti the Hair Slayer</h1>
 <p>Luxury Braiding • Hair Included • NYC</p>
-<a class="book-btn" href="#book">Book Now</a>
+<a class="book-btn" href="https://calendly.com/kartithestylist/30min" target="_blank">
+Book Now
+</a>
 </header>
 
 <section>
