Add booking buttons for various braid styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ Book Now
 <li>Knotless Bob — $180</li>
 <li>Boho Bob — $200</li>
 </ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Knotless%20Braids"
+target="_blank">
+Book Knotless Braids
+</a>
 </section>
 
 <section>
@@ -38,6 +44,12 @@ Book Now
 <li>Small — $325</li>
 <li>Flip Over Bob — $210</li>
 </ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Flip%20Over%20Braids"
+target="_blank">
+Book Flip Over Braids
+</a>
 </section>
 
 <section>
@@ -49,6 +61,12 @@ Book Now
 <li>$200 Freestyle</li>
 <li>$250 Freestyle</li>
 </ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Freestyle"
+target="_blank">
+Book Freestyle
+</a>
 </section>
 
 <section id="book">
