Add styling and booking options for braid services

--- a/index.html
+++ b/index.html
@@ -36,6 +36,88 @@ Book Knotless Braids
 </section>
 
 <section>
+<h2>Island Twists</h2>
+<ul>
+<li>Large — $200</li>
+<li>Medium — $230</li>
+<li>Small — $265</li>
+</ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Island%20Twists"
+target="_blank">
+Book Island Twists
+</a>
+</section>
+
+<section>
+<h2>Soft Faux Locs</h2>
+<ul>
+<li>18–24 inch — $220</li>
+<li>30 inch — $240</li>
+<li>36–40 inch — $260</li>
+</ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Soft%20Faux%20Locs"
+target="_blank">
+Book Soft Faux Locs
+</a>
+</section>
+
+<section>
+<h2>Invisible Locs</h2>
+<ul>
+<li>Shoulder / Bob — $185</li>
+<li>Mid-Back — $210</li>
+<li>Butt Length — $240</li>
+</ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Invisible%20Locs"
+target="_blank">
+Book Invisible Locs
+</a>
+</section>
+  
+<section>
+<h2>Fulani Braids</h2>
+<ul>
+<li>Large — $180</li>
+<li>Medium — $215</li>
+<li>Smedium — $250</li>
+<li>Small — $290</li>
+<li>Bob — $185</li>
+</ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Fulani%20Braids"
+target="_blank">
+Book Fulani Braids
+</a>
+</section>
+
+<section>
+<h2>Feed-In / Straight Back Braids</h2>
+<ul>
+<li>2 Feed-Ins — $70</li>
+<li>4 Feed-Ins — $85</li>
+<li>6 Feed-Ins — $100</li>
+<li>8–10 Feed-Ins — $120</li>
+<li>12–14 Feed-Ins — $140</li>
+<li>16–18 Feed-Ins — $160</li>
+<li>20–24 Feed-Ins — $185</li>
+<li>26–30 Feed-Ins — $220</li>
+</ul>
+
+<a class="book-btn"
+href="https://calendly.com/kartithestylist/30min?style=Feed-In%20Braids"
+target="_blank">
+Book Feed-In Braids
+</a>
+</section>
+  
+<section>
 <h2>Flip Over Braids</h2>
 <ul>
 <li>Large — $180</li>
